# case-study-hr

./: .gitignore  LICENSE  README.md  pyproject.toml
interactive_rag/: __init__.py  chat.py  prepare_data.py  session_store.py
notebooks/: demo.ipynb  mini_open_source_solution.ipynb  openai_api_solution.ipynb  tests.ipynb
